    - Applied patch by Philipp Cordes and Björn Kahlert for improved handling of names by
      autocompleter. The patch also reorganizes the autocompleter classes.
    - Table will now scroll to keep the currently edited entry visible if an edit leads to
      the entry getting sorted to a different position.
    - Reworked author and editor handling in Docbook export. Added Docbook XML header.
    - Database will no longer be marked as changed after accepting external changes, unless one or
      more changes were not accepted before merging, and unless database was already marked as
      changed.
    - Fixed bug: undesired autocompletion when saving file.
    - Fixed bug: entry editor doesn't appear when new entry is added while a filtering search or
      group selection is active.
    - Fixed bug in writing of metadata on Windows. For certain metadata lengths newlines would be
      messed up after the metadata comment in a bib file.
    - Search dialog now automatically previews first hit, and hides preview if there are no hits. 
2.6b2
    - Added export formatter "Default" which takes a single argument. Outputs the string to format
      unchanged if it is non-empty, otherwise outputs the argument.
    - Added option under Options -> Preferences -> General for disabling the strict enforcing of
      correct BibTeX keys. Disabling this makes it possible to use e.g. umlaut characters in keys.
    - Modified launcher script for Windows installer to give higher heap size limit.
    - Improved autocompletion. All fields with autocompletion which have content selectors will now
      autocomplete on content selector values. For the "journal" field, the autocompleter will now
      additionally use entries from the current journal abbreviations list, and will also complete
      on the entire field up to the cursor rather than just looking at the last word only.
    - Added support for postformatter in Layout. The postformatter will be run after